[package]
name = "stacked-portrayals"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Tool for mapping Minecraft stacktraces"

[[bin]]
name = "stackp"
path = "src/main.rs"

# Optimize a little so our parsers are fast
[profile.dev]
opt-level = 1

# Optimize dependencies in dev, so it's fast to parse the files
[profile.dev.package."*"]
opt-level = 3

# Debugging symbols for release builds
[profile.release]
debug = true

[features]
debug = []

[dependencies]
once_cell = "1.18.0"
derive_more = "0.99.17"
error-stack = "0.4.1"
serde_json = "1.0.107"
digest = "0.10.7"
sha1 = "0.10.6"
sha2 = "0.10.8"
tempfile = "3.8.0"
bimap = "0.6.3"
directories = "5.0.1"
petgraph = "0.6.4"
zip = "0.6.6"
chumsky = "0.9.2"
ariadne = "0.3.0"
itertools = "0.11.0"
tracing = "0.1.37"

[dependencies.clap]
version = "4.4.6"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.22"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]
